# raptor

./: .gitattributes  .gitignore  .test_durations  AGENT-LOG.md  AGENTS.md  CITATION.cff  CLAUDE.md  FIXES-JUSTIFICATION.md  FRIDA_INTEGRATION.md  INTEGRATION_ARCHITECTURE.md  INVESTIGATION_SUMMARY.md  MULTI_PERSONA_REVIEW.md  QUICKSTART.md  RAPTOR_DOCTOR_TEST_RECEIPT.md  README.md  Raptor (formerly Claude.md, needs fixed)  SAGE_INTEGRATION.md  SECURITY_FIX_1779307375.md  SETUP_MACOS.md  SOUL.md  agent.yaml  audit-bug-A-R016-new.md  build_inventory.py  collisions-23738.md  conftest.py  docker-compose.sage.yml  generate_diagram.py  pr-body.md  pyproject.toml  pytest.ini  raptor-cli  raptor.py  raptor_agentic.py  raptor_codeql.py  raptor_crash_analysis.py  raptor_doctor.py  raptor_fuzzing.py  raptor_meta_orchestrator.py  raptor_openant.py  raptor_startup.py  (+5 more)
.claude/: settings.json
.claude/agents/: broker-deploy-agent.md  broker-fleet-doctor-agent.md  coverage-analysis-generator-agent.md  coverage-analyzer.md  crash-analysis-agent.md  crash-analyzer-agent.md  crash-analyzer-checker-agent.md  crash-analyzer-checker.md  crash-analyzer.md  exploitability-validator-agent.md  function-trace-generator-agent.md  function-trace-generator.md  gh-api-investigator.md  gh-archive-investigator.md  gh-recovery-investigator.md  local-git-investigator.md  offsec-specialist.md  oss-evidence-verifier-agent.md  oss-forensics-agent.md  oss-hypothesis-agent.md  oss-hypothesis-checker-agent.md  oss-hypothesis-former-agent.md  oss-investigator-gh-api-agent.md  oss-investigator-gh-archive-agent.md  oss-investigator-gh-recovery-agent.md  oss-investigator-github-agent.md  oss-investigator-ioc-extractor-agent.md  oss-investigator-local-git-agent.md  oss-investigator-wayback-agent.md  oss-ioc-extractor-agent.md  oss-report-generator-agent.md
.claude/commands/: agentic.md  analyze.md  annotate.md  binary.md  broker.md  codeql.md  commands.md  crash-analysis.md  create-skill.md  cve-diff.md  cve-env.md  diagram.md  exploit.md  firmware.md  frida.md  fuzz.md  hardware.md  openant.md  oss-forensics.md  patch.md  project.md  prove-exploit.md  raptor-frida.md  raptor-fuzz.md  raptor-sca.md  raptor-scan.md  raptor-web.md  raptor.md  sca.md  scan.md  scorecard.md  threat-model.md  understand.md  validate.md  verify-exploit-proof.md  version.md  web.md  zkpox.md
.claude/skills/: tune.md
.codex/: config.toml  hooks.json
.codex/agents/: coverage-analysis-generator-agent.toml  crash-analysis-agent.toml  crash-analyzer-agent.toml  crash-analyzer-checker-agent.toml  exploitability-validator-agent.toml  function-trace-generator-agent.toml  oss-evidence-verifier-agent.toml  oss-hypothesis-checker-agent.toml  (+7 more)
.devcontainer/: Dockerfile  devcontainer.json  requirements-all-optional.txt  test_devcontainer.py
RAPTOR-modular/: README.md
completions/: _raptor.zsh  raptor.bash
core/: __init__.py  config.py  doctor.py  exec.py  git.py  logging.py  progress.py  schema_constants.py  semgrep.py  understand_bridge.py
core/zkpox/: .gitignore  Cargo.toml  Dockerfile  README.md  versions.txt
core/zkpox/guest/: Cargo.toml  build.rs
core/zkpox/guest/src/: main.rs  redzone.rs
core/zkpox/prover/: Cargo.toml
core/zkpox/prover/src/: main.rs
core/zkpox/targets/: 01-stack-bof-native.c  02-off-by-one.c  03-libxml2-cve-2017-9047.c
core/zkpox/test/: build-verifier-both-features.sh  run-tests.sh
core/zkpox/test/witnesses/: generate.py
core/zkpox/verifier/: Cargo.toml  build.rs
core/zkpox/verifier/src/: main.rs  rekor.rs
docs/: ARCHITECTURE.md  CLAUDE_CODE_QUICKSTART.md  CLAUDE_CODE_USAGE.md  DEPENDENCIES.md  DYNAMIC_INSTRUMENTATION_QUICKSTART.md  FUZZING_QUICKSTART.md  OPENAI_CODEX.md  PYTHON_CLI.md  README.md  agentic.md  architecture.md  attribution.md  binary-understanding.md  commands.md  concepts.md  configuration.md  crash-analysis-integration-plan.md  crash-analysis.md  dependencies.md  design-aggregation-dominators-wp.md  design-path-homology-cfg.md  design-sanitizer-cut-value-binding.md  exploit-feasibility.md  exploitability-validation-integration.md  fuzzing.md  getting-started-claude-code.md  hardware-gap-analysis.md  install.md  llm.md  python-cli.md  sandbox.md  sca.md  static-analysis.md  threat-model.md  understand-graph.md  understand.md  validate.md  validation.md  zkpox-scope.md
docs/research/zkpox-phase0/harness/guest/: Cargo.toml  build.rs
docs/research/zkpox-phase0/harness/host/: Cargo.toml
docs/research/zkpox-phase0/harness/host/src/: main.rs
libexec/: raptor-agentic  raptor-annotate  raptor-ast  raptor-binary  raptor-binary-graph-query  raptor-binary-oracle-e2e  raptor-binary-oracle-precision  raptor-binary-understand  raptor-build-checklist  raptor-cc-trust-check  raptor-corpus-metrics  raptor-corpus-run  raptor-coverage-summary  raptor-cve-diff  raptor-cve-env  raptor-describe  raptor-enrich-context-map  raptor-enrich-context-map-ast-view  raptor-enrich-context-map-callgraph  raptor-enrich-context-map-frida  raptor-enrich-context-map-mitigation  raptor-enrich-context-map-sinks  raptor-enrich-context-map-sites  raptor-enrich-flow-trace-ast-view  raptor-frida  raptor-graph-ingest  raptor-graph-query  raptor-lifecycle-hook  raptor-normalize-context-map  raptor-openant  raptor-panel-replay  raptor-path-homology-precision  raptor-pick-strategies  raptor-pid1-shim  raptor-project-manager  raptor-r2-sandboxed  raptor-render-diagrams  raptor-run-feasibility  raptor-run-lifecycle  raptor-run-sandboxed  (+31 more)
scripts/: register_agents.py  seed_sage_knowledge.py
semgrep/: nosemgrep.py
test/: Dockerfile  README.md  TESTBENCH_README.md  compile_test.sh  integration_tests.sh  raptor_testbench  raptor_testbench.c  raptor_testbench_afl  raptor_testbench_asan  raptor_testbench_debug  test_cli_smoke.py  test_fixes.sh  test_release_workflow.sh  test_sage_memory.py  truly_real_tests.sh  vuln_flag  vuln_flag.c  vuln_fuzz_target_mac_unprotected  vuln_fuzz_target_unprotected  vuln_fuzz_target_vuln
tests/: test_f105_semgrep_print_gate.py  test_raptor_agentic_replay_except.py  test_security_mitigations.py
(+995 files in other folders)
