[package]
name = "zkpox-prover"
version.workspace = true
edition.workspace = true
license.workspace = true
default-run = "zkpox-prove"

[[bin]]
name = "zkpox-prove"
path = "src/main.rs"

[dependencies]
sp1-sdk = { version = "6.0.1", features = ["blocking", "native-gnark"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[build-dependencies]
sp1-build = { version = "6.0.1" }
