[package]
name = "zkpox-verify"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "zkpox-verify"
path = "src/main.rs"

# Standalone bundle verifier. Designed to install and run *without*
# RAPTOR (vendors and CVE numbering authorities should be able to verify
# proofs without our Python toolchain).
#
# Phase 1.3: parses the CBOR bundle, validates structural invariants
# (gadget hash, envelope fingerprint, vendor pubkey fingerprint), prints
# a summary. STARK verification itself is wired in 1.3.x / 1.5 — adding
# sp1-sdk here doubles the verifier's compile time and the integration
# benefits from landing alongside the disclosure-engineer command surface
# rather than as part of the bundle producer.

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
ciborium = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
