[package]
name = "zkpox-phase0-guest"
version = "0.0.0"
edition = "2021"

[dependencies]
sp1-zkvm = { version = "6.0.1" }
serde = { version = "1.0", default-features = false, features = ["derive"] }

# No build-dep on cc — build.rs invokes clang directly. cc-rs assumes a
# real LLVM target and Apple clang as the host compiler; neither holds
# for SP1's custom triple, so a manual clang invocation is simpler than
# fighting cc-rs's heuristics.

